[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gtraceroute"
authors = [
    {name = "Levi Borodenko", email = "levi.borodenko@gmail.com"},
]
description = "TUI for tracing routes"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'textual==0.29'
]

dynamic = ["version"]

[project.optional-dependencies]
dev = ["textual-dev", "black", "pytest", "pytest-asyncio", "pre-commit", "mypy"]

[tool.ruff]
line-length = 120

[project.scripts]
# test-trace = "pingtracer.core.tracer:test_run"
