[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gtraceroute"
version = "0.1.0"
authors = [
    {name = "Levi Borodenko", email = "levi.borodenko@gmail.com"},
]
description = """gTraceroute is a sophisticated network diagnostic tool, combining the utility
of traditional traceroute with a user-friendly text interface similar to PingPlotter. """
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'textual==0.29'
]


[project.optional-dependencies]
dev = ["textual-dev", "black", "pytest", "pytest-asyncio", "pre-commit", "mypy"]

[tool.ruff]
line-length = 120

[project.scripts]
gtraceroute = "gtraceroute.tui.app:run"
